--- a/project/user_review/templates/user_review/review_pelicula.html
+++ b/project/user_review/templates/user_review/review_pelicula.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="{% url 'review:index' %}">Make a Post</a>
+    <h1>Add Movie</h1>
+    <form method="post">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+        </table>
+        <button type="submit">Guardar</button>
+    </form>
 </body>
 </html>
