--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="{% url 'review:index' %}">Make a Post</a>
+    <a href="{% url 'review:insertar_user' %}">Iniciar Sesion</a>
 </body>
 </html>
