--- a/project/user_review/templates/user_review/index.html
+++ b/project/user_review/templates/user_review/index.html
@@ -5,23 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <a href="{% url 'core:index' %}">INICIO</a>
-    <a href="{% url 'review:review_pelicula' %}">Movie Review</a>
-    <a href="{% url 'review:review_libro' %}">Book Review</a>
-
-    <h2>Reseñas de Libros</h2>
-    <ul>
-        {% for review in book_reviews %}
-            <li>{{ review.titulo }} - {{ review.descripcion }}</li>
-        {% endfor %}
-    </ul>
-
-    <h2>Reseñas de Peliculas</h2>
-    <ul>
-        {% for review in movie_reviews %}
-            <li>{{ review.titulo }} - {{ review.descripcion }}</li>
-        {% endfor %}
-    </ul>
-</body>
+    <body>
+        <a href="{% url 'core:index' %}">INICIO</a>
+        <a href="{% url 'review:review_pelicula' %}">Make a Movie Review</a>
+        <a href="{% url 'review:review_libro' %}">Make a Book Review</a>
+        <a href="{% url 'review:lista_reviews_peliculas' %}">Movie Reviews</a>
+        <a href="{% url 'review:lista_reviews_libros' %}">Book Reviews</a>
+    </body>
 </html>
