--- a/project/user_review/templates/user_review/insertar_user.html
+++ b/project/user_review/templates/user_review/insertar_user.html
@@ -9,8 +9,10 @@
     <h1>Usuario</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Registar</button>
+        <table>
+            {{ form.as_table }}
+        </table>
+        <button type="submit">Guardar</button>
     </form>
 </body>
 </html>
