--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #f8f8f8;
+            color: #333;
+            font-family: Arial, sans-serif;
+        }
+        a {
+            color: #d32f2f;
+            text-decoration: none;
+            margin-right: 20px;
+        }
+    </style>
 </head>
 <body>
-    <a href="{% url 'review:index' %}">Make a Post</a>
     <a href="{% url 'review:insertar_user' %}">Iniciar Sesion</a>
 </body>
 </html>
