--- a/project/user_review/templates/user_review/lista_reviews_libros.html
+++ b/project/user_review/templates/user_review/lista_reviews_libros.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #f8f8f8;
+            color: #333;
+            font-family: Arial, sans-serif;
+        }
+        h2 {
+            color: #d32f2f;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <h2>Reseñas de Libros</h2>
