--- a/project/user_review/templates/user_review/lista_reviews_peliculas.html
+++ b/project/user_review/templates/user_review/lista_reviews_peliculas.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>Reseñas de Peliculas</h2>
+{% extends "core/base.html" %}
+{% block title %}
+    Reseñas de Peliculas
+{% endblock title %}
+{% block content %}
+<style>
+    body {
+        background-color: rgba(42, 40, 43, 0.813); /* Establece el fondo a naranja */
+    }
+
+    li {
+        color: white; /* Establece el color de las letras a blanco */
+    }
+</style>
     <ul>
         {% for review in movie_reviews %}
             <li>{{ review.titulo }} - {{ review.reseña }}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock content %}
+    
