--- a/project/user_review/templates/user_review/review_libro.html
+++ b/project/user_review/templates/user_review/review_libro.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Add Book</h1>
+{% extends 'core/base.html' %}
+
+{% block title %}
+    Add Book
+{% endblock title %}
+{% block content %}
+    
     <form method="post">
         {% csrf_token %}
         <table>
@@ -14,6 +12,7 @@
         </table>
         <button type="submit">Guardar</button>
     </form>
-</body>
-</html>
+{% endblock content %}
+    
+
 
