--- a/project/core/templates/core/components/footer.html
+++ b/project/core/templates/core/components/footer.html
@@ -5,9 +5,9 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        background-color: white;
+        background-color: rgb(255, 102, 0);
     }
 </style>
 <footer class="bg-light py-5" position="fixed" bottom="0" >
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>
+    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2024 - ReviewSphere</div></div>
 </footer>
