--- a/project/core/templates/core/components/header.html
+++ b/project/core/templates/core/components/header.html
@@ -3,12 +3,12 @@
     <div class="container px-4 px-lg-5 h-100">
         <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold">Your Favorite Place for Reviews</h1>
+                <h1 class="text-white font-weight-bold">Tu lugar favorito para Reviews</h1>
                 <hr class="divider" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 mb-5">Experience the power of public opinion with ReviewSphere, your trusted source for genuine reviews and expert recommendations that guide you to the best choice for every purchase.</p>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <p class="text-white-75 mb-5">Experimenta el poder de la opinión pública con ReviewSphere, tu fuente confiable de reseñas auténticas y recomendaciones de expertos que te guían hacia la mejor elección para cada compra.</p>
+                <a class="btn btn-primary btn-xl" href="#about">encuentra más aquí</a>
             </div>
         </div>
     </div>
