--- a/project/core/templates/core/components/navbar.html
+++ b/project/core/templates/core/components/navbar.html
@@ -1,13 +1,21 @@
 <!-- Navigation-->
+<style>
+    body {
+        background-color: #ff3c00cd;
+        color: #333;
+    }
+</style>
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand">ReviewSphere</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'core:index' %}">Core</a></li>
-                <li class="nav-item"><a class="nav-link"  href="{% url 'review:lista_reviews_peliculas' %}">Movie Reviews</a></li>
-                <li class="nav-item"><a class="nav-link"href="{% url 'review:lista_reviews_libros' %}">Book Reviews</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'core:index' %}">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link"  href="{% url 'review:review_pelicula' %}">Hacer Review de Película</a></li>
+                <li class="nav-item"><a class="nav-link"  href="{% url 'review:review_libro' %}">Hacer Review de Libro</a></li>
+                <li class="nav-item"><a class="nav-link"  href="{% url 'review:lista_reviews_peliculas' %}">Reviews de Peliculas</a></li>
+                <li class="nav-item"><a class="nav-link"href="{% url 'review:lista_reviews_libros' %}">Reviews de Libros</a></li>
             </ul>
         </div>
     </div>
