--- a/project/user_review/templates/user_review/index.html
+++ b/project/user_review/templates/user_review/index.html
@@ -1,46 +1,7 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #f8f8f8;
-            color: #333;
-            font-family: Arial, sans-serif;
-        }
-        a {
-            color: #d32f2f;
-            text-decoration: none;
-            margin-right: 20px;
-        }
-    </style>
-</head>
-<body>
-    <a href="{% url 'core:index' %}">INICIO</a>
-    <a href="{% url 'review:review_pelicula' %}">Make a Movie Review</a>
-    <a href="{% url 'review:review_libro' %}">Make a Book Review</a>
-    <a href="{% url 'review:lista_reviews_peliculas' %}">Movie Reviews</a>
-    <a href="{% url 'review:lista_reviews_libros' %}">Book Reviews</a>
-</body>
-</html>
-=======
 {% extends 'core/base.html' %}
 {% block content %}
-    <style>
-    body {
-        background-color: rgba(42, 40, 43, 0.813); /* Establece el fondo a naranja */
-    }
-    </style>
-    <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-        <a class="btn btn-primary btn-xl" href="{% url 'review:review_pelicula' %}">Make a Movie Review</a>
-        <a class="btn btn-primary btn-xl" href="{% url 'review:review_libro' %}">Make a Book Review</a>
-        <a class="btn btn-primary btn-xl" href="{% url 'review:lista_reviews_peliculas' %}">Movie Reviews</a>
-        <a class="btn btn-primary btn-xl" href="{% url 'review:lista_reviews_libros' %}">Book Reviews</a>
-    </div>   
-{% endblock content %}
-        
 
->>>>>>> prueba
+{% include 'core/components/navbar.html' %}
+
+{% endblock content %}
+    
