--- a/project/user_review/templates/user_review/lista_reviews_libros.html
+++ b/project/user_review/templates/user_review/lista_reviews_libros.html
@@ -1,38 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #f8f8f8;
-            color: #333;
-            font-family: Arial, sans-serif;
-        }
-        h2 {
-            color: #d32f2f;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
-<body>
-    <h2>Reseñas de Libros</h2>
-    <ul>
-        {% for review in book_reviews %}
-            <li>{{ review.titulo }} - {{ review.reseña }}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
-=======
 {% extends "core/base.html" %}
 
 {% block title %}
@@ -40,19 +5,32 @@
 {% endblock title %}
 
 {% block content %}
+
+{% include 'core/components/navbar.html' %}
+
 <style>
     body {
-        background-color: rgba(42, 40, 43, 0.813); /* Establece el fondo a naranja */
+        background-color: #333;
+        color: #f8f8f8;
+        font-family: Arial, sans-serif;
     }
-    
+    h2 {
+        color: #d32f2f;
+    }
+    ul {
+        list-style: none;
+        padding: 0;
+    }
     li {
-        color: white; /* Establece el color de las letras a blanco */
+        margin-bottom: 10px;
     }
 </style>
 <ul>
     {% for review in book_reviews %}
-        <li>{{ review.titulo }} - {{ review.reseña }}</li>
+        <li><h4>{{ review.titulo }}</h4> - Autor: {{ review.autor }}</li>
+        <li></li>{{ review.reseña }}</li>
+        <p></p>
     {% endfor %}
 </ul>
 {% endblock content %}
->>>>>>> prueba
+
