--- a/project/user_review/templates/user_review/lista_reviews_peliculas.html
+++ b/project/user_review/templates/user_review/lista_reviews_peliculas.html
@@ -1,49 +1,33 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            body {
-                background-color: #f8f8f8;
-                color: #333;
-                font-family: Arial, sans-serif;
-            }
-            h2 {
-                color: #d32f2f;
-            }
-            ul {
-                list-style: none;
-                padding: 0;
-            }
-            li {
-                margin-bottom: 10px;
-            }
-        </style>
-    </head>
-<body>
-    <h2>Reseñas de Peliculas</h2>
-=======
 {% extends "core/base.html" %}
 {% block title %}
     Reseñas de Peliculas
 {% endblock title %}
 {% block content %}
-<style>
-    body {
-        background-color: rgba(42, 40, 43, 0.813); /* Establece el fondo a naranja */
-    }
 
-    li {
-        color: white; /* Establece el color de las letras a blanco */
-    }
-</style>
->>>>>>> prueba
+{% include 'core/components/navbar.html' %}
+
+    <style>
+        body {
+            background-color: #333;
+            color: #f8f8f8;
+            font-family: Arial, sans-serif;
+        }
+        h2 {
+            color: #d32f2f;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
     <ul>
         {% for review in movie_reviews %}
-            <li>{{ review.titulo }} - {{ review.reseña }}</li>
+            <li><h4>{{ review.titulo }}</h4> - Director: {{ review.autor }}</li>
+            <li></li>{{ review.reseña }}</li>
+            <p></p>
         {% endfor %}
     </ul>
 {% endblock content %}
