--- a/project/user_review/templates/user_review/review_pelicula.html
+++ b/project/user_review/templates/user_review/review_pelicula.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            body {
-                background-color: #f8f8f8;
-                color: #333;
-                font-family: Arial, sans-serif;
-            }
-            h2 {
-                color: #d32f2f;
-            }
-            ul {
-                list-style: none;
-                padding: 0;
-            }
-            li {
-                margin-bottom: 10px;
-            }
-        </style>
-    </head>
-<body>
-    <h1>Add Movie</h1>
+{% extends 'core/base.html' %}
+
+{% block title %}
+    Agregar Pelicula
+{% endblock title %}
+{% block content %}
+
+{% include 'core/components/navbar.html' %}
+
+    <style>
+        body {
+            background-color: #333 ;
+            color: #f8f8f8;
+            font-family: Arial, sans-serif;
+        }
+        h2 {
+            color: #d32f2f;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
     <form method="post">
         {% csrf_token %}
         <table>
@@ -31,5 +31,4 @@
         </table>
         <button type="submit">Guardar</button>
     </form>
-</body>
-</html>
+{% endblock content %}
